[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/background 2.png" type="Texture" id=1]
[ext_resource path="res://scenes/top_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Bottom UI v 2.png" type="Texture" id=3]
[ext_resource path="res://scripts/grid.gd" type="Script" id=4]
[ext_resource path="res://scripts/ice_holder.gd" type="Script" id=5]
[ext_resource path="res://scripts/lock_holder.gd" type="Script" id=6]
[ext_resource path="res://scripts/concrete_holder.gd" type="Script" id=7]
[ext_resource path="res://scripts/slime_holder.gd" type="Script" id=8]

[node name="game_window" type="Node2D"]

[node name="backgorund" type="TextureRect" parent="."]
margin_top = -1.0
margin_right = 40.0
margin_bottom = 39.0
texture = ExtResource( 1 )

[node name="top_ui" parent="." instance=ExtResource( 2 )]
margin_right = 576.0
margin_bottom = 192.0

[node name="bottom_ui" type="TextureRect" parent="."]
margin_top = 928.0
margin_right = 576.0
margin_bottom = 1020.0
texture = ExtResource( 3 )

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 4 )
piece_value = 1

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="concrete_holder" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="slime_holder" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="damage_concrete" from="grid" to="concrete_holder" method="_on_grid_damage_concrete"]
[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]
[connection signal="damage_lock" from="grid" to="lock_holder" method="_on_grid_damage_lock"]
[connection signal="damage_slime" from="grid" to="slime_holder" method="_on_grid_damage_slime"]
[connection signal="make_concrete" from="grid" to="concrete_holder" method="_on_grid_make_concrete"]
[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]
[connection signal="make_lock" from="grid" to="lock_holder" method="_on_grid_make_lock"]
[connection signal="make_slime" from="grid" to="slime_holder" method="_on_grid_make_slime"]
[connection signal="update_score" from="grid" to="top_ui" method="_on_grid_update_score"]
[connection signal="remove_lock" from="lock_holder" to="grid" method="_on_lock_holder_remove_lock"]
[connection signal="remove_concrete" from="concrete_holder" to="grid" method="_on_concrete_holder_remove_concrete"]
[connection signal="remove_slime" from="slime_holder" to="grid" method="_on_slime_holder_remove_slime"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
